--- a/TP4/TP4_RNN.ipynb
+++ b/TP4/TP4_RNN.ipynb
@@ -19,11 +19,7 @@
    "execution_count": null,
    "id": "9uYTfLUUozlC",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "9uYTfLUUozlC",
-    "outputId": "e3fb8118-5063-4e78-e275-cfe0210ddc5f"
+    "id": "9uYTfLUUozlC"
    },
    "outputs": [],
    "source": [
@@ -82,10 +78,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 373
+     "height": 362
     },
     "id": "wpOAZnugopKy",
-    "outputId": "3ba6d152-0c8d-4a7c-baa4-6189e491075b"
+    "outputId": "8a326c71-0235-4f83-c65b-04afc128e064"
    },
    "outputs": [],
    "source": [
@@ -113,10 +109,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 320
+     "height": 235
     },
     "id": "MemuEk4aovaS",
-    "outputId": "96b1372c-9051-4f1d-d815-913c74cf5f6f"
+    "outputId": "b3805273-1485-40c7-c17d-bcd1d1c34896"
    },
    "outputs": [],
    "source": [
@@ -184,10 +180,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 466
+     "height": 363
     },
     "id": "677266ea-8739-4376-aa74-4626b8eeb46b",
-    "outputId": "cc45d7d8-873b-40b6-cff1-830beb02d3ec"
+    "outputId": "b1d62f1f-5600-4ff2-8a68-f45a4d984941"
    },
    "outputs": [],
    "source": [
@@ -411,10 +407,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 585
+     "height": 510
     },
     "id": "_D81DloRVpBs",
-    "outputId": "847e15fe-656f-427d-f680-1990e7faede7"
+    "outputId": "3385a6fc-d43f-4057-9e6c-9d9fc5648845"
    },
    "outputs": [],
    "source": [
@@ -442,10 +438,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 558
+     "height": 437
     },
     "id": "IxX_ORK_WQDd",
-    "outputId": "313d3e97-3ae8-4f20-e0ed-d02d37a2365e"
+    "outputId": "d0ceb296-2b53-40f9-b32e-5e37e4a86a25"
    },
    "outputs": [],
    "source": [
@@ -522,7 +518,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "gqhp-W1IWCI3",
-    "outputId": "51219f64-6413-43ff-dbde-43ae03cc6b9a"
+    "outputId": "ab9bd0d0-2ed9-45ab-9328-174f47033a0a"
    },
    "outputs": [],
    "source": [
@@ -560,10 +556,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 508
+     "height": 389
     },
     "id": "ZjTOknC8W6-k",
-    "outputId": "659437a6-ec6f-4032-bb19-82b7699605a3"
+    "outputId": "8f036417-33bd-40e0-bf46-ab4f3252857d"
    },
    "outputs": [],
    "source": [
@@ -644,10 +640,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 558
+     "height": 437
     },
     "id": "efDgLC-RB1dz",
-    "outputId": "f02aaaf7-2b98-4cab-8042-8fb042a0ff86"
+    "outputId": "c5557c75-18c3-4b71-fc56-c9256ebe3c7c"
    },
    "outputs": [],
    "source": [
@@ -669,7 +665,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "RXImrgSipi3X",
-    "outputId": "009b6bba-4bdc-453b-cd22-d72f55eff81a"
+    "outputId": "80d80b71-969e-4870-d7ff-1a6ca0d41bc1"
    },
    "outputs": [],
    "source": [
@@ -684,10 +680,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 508
+     "height": 389
     },
     "id": "Se-WI1-hETEv",
-    "outputId": "de5966a2-f5f1-45c7-99e3-8aed34952f19"
+    "outputId": "0aed6486-ecb1-4601-a12f-bb451f0bc074"
    },
    "outputs": [],
    "source": [
@@ -716,10 +712,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 556
+     "height": 411
     },
     "id": "M_Dx3sDPpu5L",
-    "outputId": "f94e4af6-af9f-457f-c5bb-30de55c1917c"
+    "outputId": "71e044ef-ddce-4bf5-ae2b-87b5b9c63c22"
    },
    "outputs": [],
    "source": [
@@ -800,10 +796,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 558
+     "height": 434
     },
     "id": "AwtWKapCoivI",
-    "outputId": "9d729f7a-8568-4a62-f335-31c15d36859c"
+    "outputId": "de07c75c-ef6c-4bc5-dbc0-96b0f617f615"
    },
    "outputs": [],
    "source": [
@@ -823,10 +819,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 541
+     "height": 422
     },
     "id": "o-QB6W9IoxHp",
-    "outputId": "69d7cc7e-2d24-4659-ec35-8720e4457777"
+    "outputId": "3b100615-3c67-4049-9322-f57537f1a97b"
    },
    "outputs": [],
    "source": [
@@ -912,10 +908,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 558
+     "height": 440
     },
     "id": "f9r-6VppmEXq",
-    "outputId": "7fc5995e-89e2-4912-b4cb-8ef2fce0f036"
+    "outputId": "db4f7795-e4fe-4136-e23f-32759bffe7a6"
    },
    "outputs": [],
    "source": [
@@ -936,10 +932,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 541
+     "height": 422
     },
     "id": "00ZgcIODmYdF",
-    "outputId": "fa0963b0-165d-4cf7-9060-375e3d4c3de3"
+    "outputId": "71c3bab3-e546-4641-c436-29b165f9d692"
    },
    "outputs": [],
    "source": [
@@ -954,10 +950,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 508
+     "height": 390
     },
     "id": "wsmeWtPF_Jk1",
-    "outputId": "4ed2a3d2-1a3e-46ca-ef7a-01038ea90ab6"
+    "outputId": "8972bc3e-fc76-46a2-a6bd-b228824cd3d9"
    },
    "outputs": [],
    "source": [
@@ -1005,10 +1001,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 433
+     "height": 221
     },
     "id": "jPpBLF0REvX_",
-    "outputId": "d3b60e52-c565-49e7-ca9a-949d0ead867b"
+    "outputId": "d21edd5d-9386-4a2c-821f-8d4b81368f9d"
    },
    "outputs": [],
    "source": [
@@ -1025,10 +1021,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 433
+     "height": 221
     },
     "id": "mNowtGlFk9F4",
-    "outputId": "9885dad9-36dd-4888-923a-53b39b8a4e25"
+    "outputId": "9610dd95-3361-4b1f-84bf-7b0d37a422f2"
    },
    "outputs": [],
    "source": [
@@ -1043,10 +1039,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 433
+     "height": 221
     },
     "id": "wqp-9DMfnOs6",
-    "outputId": "4cba306a-e22d-421a-85f1-b13195c7f5f2"
+    "outputId": "ecbd016e-7718-4045-9dd6-07a5b2b7ad42"
    },
    "outputs": [],
    "source": [
@@ -1067,7 +1063,7 @@
      "height": 433
     },
     "id": "_2_WaUFflHdt",
-    "outputId": "76a4e9a2-f320-4c88-f9c8-e7a795565b00"
+    "outputId": "633c7a66-5a6e-4e64-9684-660a75685472"
    },
    "outputs": [],
    "source": [
@@ -1101,10 +1097,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 486
+     "height": 377
     },
     "id": "CKzXpItL59SG",
-    "outputId": "9690607f-d705-4644-eea9-72e3468e79b4"
+    "outputId": "05e605a4-ff92-48e6-b166-8e1d9dfcd260"
    },
    "outputs": [],
    "source": [
@@ -1125,7 +1121,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "xsQzU6HOvNxD",
-    "outputId": "601365a9-c51d-4111-b46d-178a47d92592"
+    "outputId": "1b6e5983-1ec4-4ecf-8789-5308f50deefb"
    },
    "outputs": [],
    "source": [
@@ -1148,7 +1144,7 @@
      "height": 440
     },
     "id": "LL9NlZIG5KX7",
-    "outputId": "886c825e-9e8b-4ba0-d307-c20ce8177d71"
+    "outputId": "7e0e7f11-d1df-4423-fd24-20c46467f6a1"
    },
    "outputs": [],
    "source": [
@@ -1161,7 +1157,8 @@
     "subset_to_fill = df_encoded.loc[nan_stopped:, 'unclean_temperature']\n",
     "df_encoded.loc[nan_stopped:, 'temperature'] = subset_to_fill.ffill()\n",
     "\n",
-    "df_encoded.loc[nan_indices[:10]]"
+    "df_encoded.loc[nan_indices[:10]]\n",
+    "df_encoded = df_encoded.drop(columns=['unclean_temperature'])"
    ]
   },
   {
@@ -1173,7 +1170,7 @@
     "id": "HXqFjJF8sZrw",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "5dcabfff032cba0cab667a28c8c9a2b5",
+     "checksum": "f3a0546aa20909407c8ff728bfbd65db",
      "grade": false,
      "grade_id": "cell-b4d18679b0f6e0da",
      "locked": false,
@@ -1200,7 +1197,7 @@
     "        self.missing_indices = missing_indices\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.data) - self.input_sequence_len - 2*self.output_size - 2*self.missing_data_len\n",
+    "        return len(self.data) - 2*self.input_sequence_len - 2*self.output_size - self.missing_data_len\n",
     "\n",
     "    def __getitem__(self, start_idx):\n",
     "        stop_sequence_idx = start_idx + self.input_sequence_len\n",
@@ -1218,6 +1215,8 @@
     "        # Extracting a sequence of data\n",
     "        # YOUR CODE HERE\n",
     "        raise NotImplementedError()\n",
+    "        assert sequence.shape[0] == self.input_sequence_len\n",
+    "        assert target.shape[0] == self.output_size\n",
     "        return {'sequence': torch.Tensor(sequence), 'target': torch.Tensor(target)}"
    ]
   },
@@ -1226,7 +1225,11 @@
    "execution_count": null,
    "id": "svIjr-hgBSG1",
    "metadata": {
-    "id": "svIjr-hgBSG1"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "svIjr-hgBSG1",
+    "outputId": "54a0550d-64a1-48d2-d066-5a30ab1ecebe"
    },
    "outputs": [],
    "source": [
@@ -1234,26 +1237,14 @@
     "train_df = df_encoded.iloc[:split_at]\n",
     "test_df = df_encoded.iloc[split_at:]\n",
     "\n",
-    "input_sequence_len = 20\n",
-    "output_size = 3\n",
+    "input_sequence_len = 24 # Take the last 24 hours as an input sequence\n",
+    "\n",
+    "output_size = 4\n",
+    "batch_size = 128\n",
     "\n",
     "dataset = TimeSeriesDataset(train_df, input_sequence_len, output_size=output_size)\n",
-    "dataloader = DataLoader(dataset, batch_size=64, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "Kmlr8_9OBsAJ",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Kmlr8_9OBsAJ",
-    "outputId": "f1de7bba-912f-4ec1-9337-9c2191660955"
-   },
-   "outputs": [],
-   "source": [
+    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
     "sample_batch = next(iter(dataloader))\n",
     "\n",
     "print(sample_batch['sequence'].shape)\n",
@@ -1286,14 +1277,13 @@
    "id": "AZkpv5wm6Frm",
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 413
+     "base_uri": "https://localhost:8080/"
     },
     "deletable": false,
     "id": "AZkpv5wm6Frm",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e169ccce97ef9c890aa2cbbcce5d90bb",
+     "checksum": "b77fcc57b7890dad2c66a0ed35195048",
      "grade": false,
      "grade_id": "cell-826a173d85267a64",
      "locked": false,
@@ -1301,15 +1291,14 @@
      "solution": true,
      "task": false
     },
-    "outputId": "d0d02573-29ad-4bee-c390-c5f0b93bb680",
+    "outputId": "5ac2c6a0-67d2-4341-a22f-3ac5d4dec45b",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "input_size = ...\n",
-    "hidden_size = ...\n",
+    "input_size = 17\n",
+    "hidden_size = 64\n",
     "\n",
-    "input_sequence_len = 2*24 # Take the last 72 hours as an input sequence\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -1327,12 +1316,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2aP4GEOb1Z-",
+   "metadata": {
+    "deletable": false,
+    "id": "c2aP4GEOb1Z-",
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "459e2f4311f0569d258fd1fd9b31f244",
+     "grade": false,
+     "grade_id": "cell-d7a1680a7d87064b",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ugxden27o2x",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 521
-    },
     "deletable": false,
     "id": "1ugxden27o2x",
     "nbgrader": {
@@ -1345,7 +1355,6 @@
      "solution": true,
      "task": false
     },
-    "outputId": "7e64b157-08b8-41a4-b866-a6a04563c8b5",
     "tags": []
    },
    "outputs": [],
