--- a/TP4/TP4_RNN.ipynb
+++ b/TP4/TP4_RNN.ipynb
@@ -1004,7 +1004,7 @@
      "height": 221
     },
     "id": "jPpBLF0REvX_",
-    "outputId": "d21edd5d-9386-4a2c-821f-8d4b81368f9d"
+    "outputId": "f7588cdc-efa6-4e5a-c6a4-d4cf24b46782"
    },
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
      "height": 221
     },
     "id": "mNowtGlFk9F4",
-    "outputId": "9610dd95-3361-4b1f-84bf-7b0d37a422f2"
+    "outputId": "30ef4c84-3604-452d-a851-361472624e61"
    },
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
      "height": 221
     },
     "id": "wqp-9DMfnOs6",
-    "outputId": "ecbd016e-7718-4045-9dd6-07a5b2b7ad42"
+    "outputId": "c79b0a63-35d6-44ac-ddeb-d91549d6e758"
    },
    "outputs": [],
    "source": [
@@ -1063,13 +1063,17 @@
      "height": 433
     },
     "id": "_2_WaUFflHdt",
-    "outputId": "633c7a66-5a6e-4e64-9684-660a75685472"
+    "outputId": "c9864d04-47ed-49d7-c73e-e7d6b41f95e7"
    },
    "outputs": [],
    "source": [
     "# One-hot encoding\n",
-    "df_encoded = pd.get_dummies(df, columns=['month'])\n",
-    "# Alternatively, we use cyclical encoding for hours\n",
+    "#df_encoded = pd.get_dummies(df, columns=['month'])\n",
+    "# Alternatively, we use a cyclical encoding\n",
+    "df_encoded = df\n",
+    "df_encoded['month_sin'] = np.sin(2 * np.pi * df['month'] / 24)\n",
+    "df_encoded['month_cos'] = np.cos(2 * np.pi * df['month'] / 24)\n",
+    "\n",
     "df_encoded['hour_sin'] = np.sin(2 * np.pi * df['hour'] / 24)\n",
     "df_encoded['hour_cos'] = np.cos(2 * np.pi * df['hour'] / 24)\n",
     "\n",
@@ -1085,7 +1089,7 @@
     "df_encoded['day'] = df_encoded['day']/31\n",
     "\n",
     "# Remove unused columns\n",
-    "columns_to_drop = ['year','date', 'timestamp', 'hour','temperature (Kelvin)']\n",
+    "columns_to_drop = ['year','month','hour','date', 'timestamp' ,'temperature (Kelvin)']\n",
     "df_encoded = df_encoded.drop(columns=columns_to_drop, axis=1)\n",
     "df_encoded"
    ]
@@ -1100,7 +1104,7 @@
      "height": 377
     },
     "id": "CKzXpItL59SG",
-    "outputId": "05e605a4-ff92-48e6-b166-8e1d9dfcd260"
+    "outputId": "211903ad-a621-4b8e-e1a2-54c446776d5b"
    },
    "outputs": [],
    "source": [
@@ -1121,7 +1125,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "xsQzU6HOvNxD",
-    "outputId": "1b6e5983-1ec4-4ecf-8789-5308f50deefb"
+    "outputId": "874cced8-86b4-4878-f22b-1767aac32011"
    },
    "outputs": [],
    "source": [
@@ -1141,10 +1145,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 440
+     "height": 436
     },
     "id": "LL9NlZIG5KX7",
-    "outputId": "7e0e7f11-d1df-4423-fd24-20c46467f6a1"
+    "outputId": "0663f125-c017-488a-fdbd-fedb832477dd"
    },
    "outputs": [],
    "source": [
@@ -1158,7 +1162,9 @@
     "df_encoded.loc[nan_stopped:, 'temperature'] = subset_to_fill.ffill()\n",
     "\n",
     "df_encoded.loc[nan_indices[:10]]\n",
-    "df_encoded = df_encoded.drop(columns=['unclean_temperature'])"
+    "print(df_encoded.head())\n",
+    "df_encoded = df_encoded.drop(columns=['unclean_temperature'])\n",
+    "df_encoded.head()"
    ]
   },
   {
@@ -1229,7 +1235,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "svIjr-hgBSG1",
-    "outputId": "54a0550d-64a1-48d2-d066-5a30ab1ecebe"
+    "outputId": "f8885214-cb75-4e99-a32a-af2a58d5c69f"
    },
    "outputs": [],
    "source": [
@@ -1277,13 +1283,14 @@
    "id": "AZkpv5wm6Frm",
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
     },
     "deletable": false,
     "id": "AZkpv5wm6Frm",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b77fcc57b7890dad2c66a0ed35195048",
+     "checksum": "e88da7aa20dfab0e3543092992ee8ac8",
      "grade": false,
      "grade_id": "cell-826a173d85267a64",
      "locked": false,
@@ -1291,14 +1298,11 @@
      "solution": true,
      "task": false
     },
-    "outputId": "5ac2c6a0-67d2-4341-a22f-3ac5d4dec45b",
+    "outputId": "9c075e11-3221-4a8a-8971-b675767c6749",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "input_size = 17\n",
-    "hidden_size = 64\n",
-    "\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -1322,9 +1326,9 @@
     "id": "c2aP4GEOb1Z-",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "459e2f4311f0569d258fd1fd9b31f244",
+     "checksum": "38814ea693f233e5b5857d86991f7095",
      "grade": false,
-     "grade_id": "cell-d7a1680a7d87064b",
+     "grade_id": "cell-2613cc650c2f651b",
      "locked": false,
      "schema_version": 3,
      "solution": true,
