--- a/TP7/TP7_partI.ipynb
+++ b/TP7/TP7_partI.ipynb
@@ -6,7 +6,7 @@
         "id": "MSgiKnAs1BbN"
       },
       "source": [
-        "# **Practical session n°8** : Learning-to-Rank and Re-identification"
+        "# **Practical session n°7** : Learning-to-Rank and Re-identification"
       ]
     },
     {
@@ -68,7 +68,7 @@
       "source": [
         "# imports from a git repo\n",
         "git clone https://github.com/relmonta/ml-student.git\n",
-        "os.chdir('ml-student/TP8')\n",
+        "os.chdir('ml-student/TP7')\n",
         "\n",
         "from archis import *\n",
         "from utile_tp8_partI import *\n",
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "# si erreur :\n",
+        "# Just in case:\n",
         "# from shutil import rmtree\n",
         "# rmtree(dir_test)"
       ]
